added two functions to call to get current weather and a five day forecast

--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
 
     <body>
         <h1>Search for a city:</h1>
-            <form id="user-form">
+        <form id="user-form">
             <input id="cityInput" type="text">
 
             <button id="submitButton" type="submit">Search</button>
         </form>
 
+        <div id="curWeather">
+            
+        </div>
+
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
         <script src="./assets/js/script.js"></script>
     </body>
 
