--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
 
@@ -13,7 +14,39 @@
         </form>
 
         <div id="curWeather">
-            
+            <h2 id="cityToday"></h2> <img>
+            <p class="temp"></p>
+            <p class="wind"></p>
+            <p class="humidity"></p>
+            <p class="uvIndex"></p>
+        </div>
+
+        <div class="row">
+            <div class="col card">
+                <div class="card-body">
+                This is some text within a card body.
+                </div>
+            </div>
+            <div class="col card">
+                <div class="card-body">
+                This is some text within a card body.
+                </div>
+            </div>
+            <div class="col card">
+                <div class="card-body">
+                This is some text within a card body.
+                </div>
+            </div>
+            <div class="col card">
+                <div class="card-body">
+                This is some text within a card body.
+                </div>
+            </div>
+            <div class="col card">
+                <div class="card-body">
+                This is some text within a card body.
+                </div>
+            </div>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
