--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
 
     <body>
+        <header>
+            <h1>Weather Dashboard</h1>
+        </header>
         <h1>Search for a city:</h1>
         <form id="user-form">
             <input id="cityInput" type="text">
@@ -21,30 +24,52 @@
             <p class="uvIndex"></p>
         </div>
 
+        <h1>5-Day Forecast:</h1>
+
         <div class="row">
             <div class="col card">
                 <div class="card-body">
-                This is some text within a card body.
+                    <h3 class="forecastDate"></h3>
+                    <img>
+                    <p class = "forecastTemp">Temp: <span></span></p>
+                    <p class = "forecastWind">Wind: <span></span></p>
+                    <p class = "forecastHumid">Humidity: <span></span></p>
                 </div>
             </div>
             <div class="col card">
                 <div class="card-body">
-                This is some text within a card body.
+                    <h3 class="forecastDate"></h3>
+                    <img>
+                    <p class = "forecastTemp">Temp: <span></span></p>
+                    <p class = "forecastWind">Wind: <span></span></p>
+                    <p class = "forecastHumid">Humidity: <span></span></p>
                 </div>
             </div>
             <div class="col card">
                 <div class="card-body">
-                This is some text within a card body.
+                    <h3 class="forecastDate"></h3>
+                    <img>
+                    <p class = "forecastTemp">Temp: <span></span></p>
+                    <p class = "forecastWind">Wind: <span></span></p>
+                    <p class = "forecastHumid">Humidity: <span></span></p>
                 </div>
             </div>
             <div class="col card">
                 <div class="card-body">
-                This is some text within a card body.
+                    <h3 class="forecastDate"></h3>
+                    <img>
+                    <p class = "forecastTemp">Temp: <span></span></p>
+                    <p class = "forecastWind">Wind: <span></span></p>
+                    <p class = "forecastHumid">Humidity: <span></span></p>
                 </div>
             </div>
             <div class="col card">
                 <div class="card-body">
-                This is some text within a card body.
+                    <h3 class="forecastDate"></h3>
+                    <img>
+                    <p class = "forecastTemp">Temp: <span></span></p>
+                    <p class = "forecastWind">Wind: <span></span></p>
+                    <p class = "forecastHumid">Humidity: <span></span></p>
                 </div>
             </div>
         </div>
