--- a/index.html
+++ b/index.html
@@ -15,8 +15,22 @@
             <form id="user-form">
                 <input id="cityInput" type="text">
 
-                <button id="submitButton" type="submit">Search</button>
+                <button id="submitButton" type="submit" class="btn btn-primary">Search</button>
             </form>
+
+            <hr>
+
+            <!-- <ul>
+                <li>City</li>
+                <li>City</li>
+                <li>City</li>
+                <li>City</li>
+                <li>City</li>
+            </ul> -->
+            <section id="searchHistory">
+
+            </section>
+
         </aside>
 
         <section id = weatherSect>
@@ -33,7 +47,7 @@
             <div class="row">
                 <div class="col card">
                     <div class="card-body">
-                        <h3 class="forecastDate"></h3>
+                        <h4 class="forecastDate"></h4>
                         <img>
                         <p class = "forecastTemp">Temp: <span></span></p>
                         <p class = "forecastWind">Wind: <span></span></p>
@@ -42,7 +56,7 @@
                 </div>
                 <div class="col card">
                     <div class="card-body">
-                        <h3 class="forecastDate"></h3>
+                        <h4 class="forecastDate"></h4>
                         <img>
                         <p class = "forecastTemp">Temp: <span></span></p>
                         <p class = "forecastWind">Wind: <span></span></p>
@@ -51,7 +65,7 @@
                 </div>
                 <div class="col card">
                     <div class="card-body">
-                        <h3 class="forecastDate"></h3>
+                        <h4 class="forecastDate"></h4>
                         <img>
                         <p class = "forecastTemp">Temp: <span></span></p>
                         <p class = "forecastWind">Wind: <span></span></p>
@@ -60,7 +74,7 @@
                 </div>
                 <div class="col card">
                     <div class="card-body">
-                        <h3 class="forecastDate"></h3>
+                        <h4 class="forecastDate"></h4>
                         <img>
                         <p class = "forecastTemp">Temp: <span></span></p>
                         <p class = "forecastWind">Wind: <span></span></p>
@@ -69,7 +83,7 @@
                 </div>
                 <div class="col card">
                     <div class="card-body">
-                        <h3 class="forecastDate"></h3>
+                        <h4 class="forecastDate"></h4>
                         <img>
                         <p class = "forecastTemp">Temp: <span></span></p>
                         <p class = "forecastWind">Wind: <span></span></p>
